attempt dont fix on ios

--- a/bjarne_dev/static/assets/css/index.css
+++ b/bjarne_dev/static/assets/css/index.css
@@ -20,6 +20,14 @@
     --gd-3: #C822FF;
 }
 
+/* Consolas - monospace */
+/* @font-face {
+    font-family: 'Consolas';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''), url('/static/assets/fonts/Consolas.ttf') format('truetype');
+} */
+
 html,
 input,
 textarea,
@@ -37,18 +45,18 @@ html, body {
     height: 100%;
     margin: 0;
     display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center;    /* Center vertically */
+    justify-content: center;
+    align-items: center;
 }
 div#console {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     /* max-width: 100%; */
     min-width: 0;
     max-width: 100vw;
     max-height: 100vh;
-    overflow: hidden;
+    overflow: visible;
     padding: 10px;
     box-sizing: border-box;
     flex-shrink: 1;
@@ -62,10 +70,12 @@ span#banner {
     background: linear-gradient(217deg, var(--gd-0), rgba(255, 0, 0, 0) 70.71%), linear-gradient(127deg, var(--gd-1), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, var(--gd-2), rgba(0, 0, 255, 0) 70.71%);
     background-clip: text;
     color: transparent;
+    max-width: 100vw;
 }
 
 span#banner span {
     color: transparent;
+    max-width: 100vw;
 }
 
 span.ascii {
@@ -73,7 +83,8 @@ span.ascii {
     white-space: pre;
     letter-spacing: 0;
     line-height: 1;
-    font-family: 'Consolas', 'BitstreamVeraSansMono', 'CourierNew', Courier, monospace;
+    /* font-family: 'Consolas', 'BitstreamVeraSansMono', 'CourierNew', Courier, monospace; */
+    font-family: Consolas, 'SF Mono', SFMono-Regular, ui-monospace, 'DejaVu Sans Mono', Menlo, monospace;
     border-width: 1px;
     border-style: solid;
     border-color: transparent;
